# usable-vibe

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml  vibe.spec
distribution/zed/: extension.toml
docs/: README.md  acp-setup.md
scripts/: README.md  bump_version.py  install.sh  prepare_release.py
scripts/ci/: build-pyinstaller-binaries.sh  clear-linux-execstack.sh  inject-sentry-dsn.sh  setup-linux-pyinstaller-build.sh  smoke-pyinstaller-cli.sh
tests/: conftest.py  constants.py  test_agent_backend.py  test_agent_loop_images.py  test_agent_observer_streaming.py  test_agent_stats.py  test_agent_tool_call.py  test_approve_always_permanent.py  test_cli_programmatic_preload.py  test_deferred_init.py  test_history_manager.py  test_install_script.py  test_mcp_auth_notices.py  test_middleware.py  test_permission_store.py  test_prepare_release.py  test_private_scripts.py  test_reasoning_content.py  test_system_prompt.py  test_tracing.py  test_ui_input_history.py
tests/acp/: conftest.py  smoke_binary.py  test_acp.py  test_acp_disabled_tools_merge.py  test_acp_entrypoint_smoke.py  test_acp_hooks.py  test_acp_title.py  test_auth_status.py  test_authenticate.py  test_bash.py  test_close_session.py  test_commands.py  test_compact_session_updates.py  test_edit.py  test_fork_session.py  test_image_blocks.py  test_initialize.py  test_load_session.py  test_multi_session.py  test_new_session.py  test_proxy_setup_acp.py  test_read.py  test_session_auto_title.py  test_session_delete.py  test_session_set_title.py  test_set_config_option.py  test_set_model.py  test_telemetry_notification.py  test_todo.py  test_tool_call_session_update.py  test_tool_field_meta.py  test_user_display_content.py  test_utils.py  test_workspace_trust.py  test_write_file.py
tests/agent_loop/: test_agent_auto_compact.py  test_agent_auto_title.py  test_agent_backend.py  test_agent_loop_images.py  test_agent_loop_refresh_system_prompt.py  test_agent_observer_streaming.py  test_agent_override_resolve_permission.py  test_agent_tool_call.py  test_agents.py  test_deferred_init.py
tests/autocompletion/: test_path_completion_controller.py  test_path_prompt.py  test_path_prompt_image.py  test_slash_command_controller.py  test_ui_chat_autocompletion.py
tests/backend/: test_anthropic_adapter.py  test_backend.py  test_image_encoding_cache.py  test_image_mapping.py  test_openai_responses_adapter.py  test_ssl_integration.py  test_vertex_anthropic_adapter.py
tests/banner/: test_banner_initial_state.py
tests/browser_sign_in/: stubs.py  test_browser_sign_in.py  test_browser_sign_in_http.py
tests/cli/: _inline_live_spike_app.py  _inline_spike_app.py  _inline_transient_spike_app.py  smoke_binary.py  terminal_loop.py  test_approval_app_grace_period.py  test_check_and_resolve_trusted_folder.py  test_clipboard.py  test_commands.py  test_compact_message.py  test_connector_auth_app.py  test_copy_shortcuts.py  test_feedback_bar_manager.py  test_help.py  test_initial_agent_name.py  test_inline_inject.py  test_inline_scrollback_spike.py  test_input_kinds.py  test_lazy_audio_managers.py  test_mcp_add_command.py  test_mcp_app.py  test_mcp_oauth_app.py  test_native_scroll_history.py  test_native_scroll_interactive.py  test_native_scroll_local_input.py  test_native_scroll_routing.py  test_native_scroll_status_control.py  test_programmatic_setup.py  test_question_app.py  test_question_app_grace_period.py  test_rename_command.py  test_rewind_app_vim.py  test_scrollback_committer.py  test_scrollback_rendering.py  test_session_delete.py  test_startup_update_prompt.py  test_terminal_detect.py  test_tool_result_render.py  test_typing_debounce.py  test_ui_exit_command.py  (+7 more)
tests/core/: test_add_dir.py  test_agent_loop_refresh_config.py  test_agents.py  test_backend_error.py  test_build_attachment_counts.py  test_build_ssl_context.py  test_cache_store.py  test_compaction.py  test_config_builder.py  test_config_bus.py  test_config_layer.py  test_config_load_dotenv.py  test_config_mcp_auth.py  test_config_orchestrator.py  test_config_otel.py  test_config_patch_ops.py  test_config_paths.py  test_config_resolution.py  test_config_toml_end_to_end.py  test_edit_encoding.py  test_environment_layer.py  test_fingerprint.py  test_home_paths.py  test_hooks.py  test_image_attachment.py  test_keyring.py  test_last_user_message.py  test_llm_message_merge.py  test_local_config_files.py  test_loop.py  test_mcp_oauth.py  test_mcp_settings.py  test_message_list.py  test_overrides_layer.py  test_project_config_layer.py  test_remote_agent_loop.py  test_resolve_api_key.py  test_retry.py  test_rewind_integration.py  test_rewind_manager.py  (+13 more)
tests/e2e/: common.py  conftest.py  mock_server.py  test_cli_native_scroll.py  test_cli_tui_fresh_install.py  test_cli_tui_hooks.py  test_cli_tui_onboarding.py  test_cli_tui_session_exit.py  test_cli_tui_streaming.py  test_cli_tui_tool_approval.py  test_mock_server.py  test_native_scroll_multiparagraph.py
tests/onboarding/: test_run_onboarding.py  test_ui_onboarding.py
tests/session/: test_resume_sessions.py  test_saved_sessions.py  test_session_loader.py  test_session_logger.py
tests/setup/: test_update_prompt_dialog.py  test_update_prompt_theme.py
tests/skills/: conftest.py  test_builtin_sync.py  test_manager.py  test_models.py  test_parser.py
tests/snapshots/: base_snapshot_test_app.py  conftest.py  test_ui_snapshot_clipboard_notice.py  test_ui_snapshot_config_issues.py  test_ui_snapshot_diff_view_truncation.py  test_ui_snapshot_edit_diff.py  test_ui_snapshot_feedback_bar.py  test_ui_snapshot_mcp_command.py  test_ui_snapshot_onboarding_api_key.py  test_ui_snapshot_onboarding_theme.py  test_ui_snapshot_parallel_tool_calls.py  test_ui_snapshot_session_picker.py  test_ui_snapshot_streaming_tool_call.py  test_ui_snapshot_teleport.py  test_ui_snapshot_tool_hooks.py  test_ui_snapshot_trust_folder_dialog.py  test_ui_snapshot_update_prompt.py
tests/stubs/: fake_backend.py  fake_connector_registry.py  fake_mcp_registry.py  (+3 more)
vibe/: __init__.py  whats_new.md
(+387 files in other folders)
